--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       content="Interactive sequencer and drum machine"
     />
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
+    <link href="https://fonts.googleapis.com/css?family=Faster+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Aldrich&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="application.css" />
     <!--
